feat(web): deno-specific modifications
